Refactoring: link show all books

--- a/webapp/static/sass/blocks/_main_page.sass
+++ b/webapp/static/sass/blocks/_main_page.sass
@@ -15,7 +15,7 @@
     font-style: italic  
     text-transform: uppercase
     font-weight: 600
-    color: $blue-color
+    color: $ruby-color
   &-description
     display: block
     text-align: center
@@ -23,6 +23,8 @@
     font-size: 16px
     font-weight: 600
     color: $blue-color
+  &-link
+    text-decoration: none
 
 .block
   &-container
