--- a/webapp/static/sass/_hovers.sass
+++ b/webapp/static/sass/_hovers.sass
@@ -55,3 +55,10 @@
         &:active 
           border-color: $blue-color
           fill: $ruby-color
+
+  .title
+    &-name
+      &:hover
+        color: $blue-color
+      &:active 
+        color: $ruby-color
