Add: animation for books page + categories

--- a/webapp/static/sass/_hovers.sass
+++ b/webapp/static/sass/_hovers.sass
@@ -1,64 +1,68 @@
 @media (min-width: 992px)
-  .menu
-    &-logo
-      &:hover
-        color: $blue-color
-      &:active 
-        color: $ruby-color
+  .menu-logo
+    &:hover
+      color: $blue-color
+    &:active 
+      color: $ruby-color
 
-  .nav
-    &__link
-      &:hover
-        color: $blue-color
-      &:active 
-        color: $ruby-color
+  .nav__link
+    &:hover
+      color: $blue-color
+    &:active 
+      color: $ruby-color
 
-  .button
-    &-login
-      &:hover
-        color: $blue-color
-        border-color: $blue-color
-      &:active 
-        color: $ruby-color
-        border-color: $ruby-color
+  .button-login
+    &:hover
+      color: $blue-color
+      border-color: $blue-color
+    &:active 
+      color: $ruby-color
+      border-color: $ruby-color
 
-  .dropdown
-    &-menu
-      &__link
-        &:hover
-          color: $blue-color
-        &:active 
-          color: $ruby-color
+  .dropdown-menu__link
+    &:hover
+      color: $blue-color
+    &:active 
+      color: $ruby-color
 
-  .block
-    &-list
-      &__link
-        &:hover
-          color: $blue-color
-        &:active 
-          color: $ruby-color
+  .block-list__link
+    &:hover
+      color: $blue-color
+    &:active 
+      color: $ruby-color
 
-  .contacts
-    &-link
-      &:hover
-        color: $blue-color
-        fill: $blue-color
-      &:active 
-        color: $ruby-color
-        fill: $ruby-color
+  .contacts-link
+    &:hover
+      color: $blue-color
+      fill: $blue-color
+    &:active 
+      color: $ruby-color
+      fill: $ruby-color
 
-  .to
-    &-top
-        &:hover
-          border-color: $blue-color
-          fill: $blue-color
-        &:active 
-          border-color: $blue-color
-          fill: $ruby-color
+  .to-top
+    &:hover
+      border-color: $blue-color
+      fill: $blue-color
+    &:active 
+      border-color: $blue-color
+      fill: $ruby-color
 
-  .title
-    &-name
-      &:hover
-        color: $blue-color
-      &:active 
-        color: $ruby-color
+  .title-name
+    &:hover
+      color: $blue-color
+    &:active 
+      color: $ruby-color
+
+  .book-name
+    &:hover
+      color: $blue-color
+    &:active 
+      color: $ruby-color
+
+  .button-send
+    &:hover
+      color: $blue-color
+      border-color: $blue-color
+    &:active 
+      color: $ruby-color
+      border-color: $ruby-color
