--- a/webapp/static/sass/blocks/_books.sass
+++ b/webapp/static/sass/blocks/_books.sass
@@ -4,7 +4,7 @@
   &-wrapper
     padding-top: 60px
     margin-left: 50px
-    min-width: 890px
+    max-width: 890px
 
 .container
   max-width: 1140px
@@ -90,5 +90,3 @@
     &-info
       color: $ruby-color
       font-weight: 400
-  &-description
-    height: 115px
