--- a/webapp/static/sass/style.sass
+++ b/webapp/static/sass/style.sass
@@ -19,6 +19,9 @@
 // Импорт секции Книги (Book)
 @import "blocks/_books"
 
+// Импорт секции Деталей по книгам
+@import "blocks/_book"
+
 // Импорт секции Footer
 @import "blocks/_footer"
 
