--- a/webapp/templates/book_details.html
+++ b/webapp/templates/book_details.html
@@ -1,6 +1,19 @@
-{% extends "blocks/base.html" %}
+<!-- prettier-ignore -->
+{% include "blocks/base.html" %}
 {% block body %}
   {% include "blocks/header.html" %}
-  <span>{{ book_data.title }}</span>
-  <img src="{{ book_data.image }}" alt="" />
+
+<div class="book-wrapper">
+  <h1>{{ book_data.title }}</h1>
+  <img
+    src="{{ book_data.image }}"
+    alt="Image: {{ book_data.title  }}"
+    class="book-image__img"
+  />
+</div>
+<!-- /.book-wrapper -->
+
 {% endblock %}
+
+<!-- prettier-ignore -->
+{% include "blocks/footer.html" %}
